--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
     <finalName>${project.artifactId}</finalName>
 </build>
   <dependencies>
+  <dependency>
+    <groupId>com.github.lalyos</groupId>
+    <artifactId>jfiglet</artifactId>
+    <version>0.0.3</version>
+</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
